--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9380678619785669"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="utf-8" />
     <link
       rel="stylesheet"
@@ -10,12 +15,14 @@
       type="image/png"
       sizes="96x96"
       rel="icon"
-      href="./icons8-poker-chip-96.png" />
+      href="./icons8-poker-chip-96.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app" />
+      content="Web site created using create-react-app"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
