--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9380678619785669"
-      crossorigin="anonymous"
-    ></script>
-    <meta charset="utf-8" />
+   ad <meta charset="utf-8" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
