--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Degen101 - Free GTO Preflop Strategy Tool"
+      content="Never make a preflop mistake again. Simply input the table action, and play your hand according to the suggested GTO ranges. In addition, our range constructor also allows you to customize your own ranges to suit your needs. Degen101 supports RFI, vs RFI, RFI vs 3-bet, and vs 3-bet cold ranges."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
